# movie_project

./: .project  celerybeat-schedule  pyproject.toml
home/: .gitignore  models.py  views.py
home/management/commands/: MovieForTime.py
home/migrations/: 0001_initial.py  0002_auto_20210420_1107.py  0003_auto_20210421_1938.py  0004_auto_20210421_1946.py  0005_auto_20210423_1851.py  0006_auto_20210423_1907.py  0007_auto_20210423_1926.py  0008_auto_20210423_2014.py  0009_auto_20210423_2054.py  0010_auto_20210423_2055.py  0011_auto_20210423_2130.py  0012_auto_20210423_2130.py  0013_delete_alternativetitle.py  0014_auto_20210424_1639.py  0015_auto_20210515_1544.py
home/templates/: index.html
movie_api/: celery.py  settings.py  urls.py
