[tool.poetry]
name = "movie_api"
version = "0.1.0"
description = ""
authors = ["Kateryna Bakhchedzhy <k.bakhchedzhy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
