[tool.poetry]
name = "movie_api"
version = "0.1.0"
description = ""
authors = ["Kateryna Bakhchedzhy <k.bakhchedzhy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.9.0"
psycopg2-binary = "^2.8.6"
Django = "^3.1.7"
tmdbv3api = "^1.7.5"
djangorestframework = "^3.12.4"
drf-yasg = "^1.20.0"
django-rest-framework = "^0.1.0"
celery = "^5.0.5"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
